--- a/.github/workflows/test-env-var.yml
+++ b/.github/workflows/test-env-var.yml
@@ -7,7 +7,6 @@ env:
 jobs:
   bash-script:
     runs-on: ubuntu-latest
-    environment: DO_NOT_TRACK
 
     steps:
       - name: Checkout code
@@ -17,4 +16,4 @@ jobs:
         run: |
           echo 123
           echo $DO_NO_TRACK
-          # echo var.DO_NOT_TRACK ${{ vars.DO_NOT_TRACK }}
+          echo var.DO_NOT_TRACK ${{ vars.DO_NOT_TRACK }}
